--- a/index.html
+++ b/index.html
@@ -1160,37 +1160,8 @@
         </section>
 
         <section id="chat" class="section-content bg-white p-8 rounded-2xl shadow-xl space-y-6 hidden">
-            <h2 class="text-3xl font-semibold text-center bg-gradient-to-r from-cyan-600 to-indigo-600 bg-clip-text text-transparent mb-2">💬 AI-Guided First-Aid Support</h2>
-            <div class="flex flex-wrap items-center justify-center gap-3 mb-4 text-sm">
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I feel anxious about exams">Anxious (Exams)</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I am stressed about work deadlines">Stressed (Work)</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I feel low and unmotivated">Low Mood</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I am having trouble sleeping">Sleep Trouble</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I’m overthinking and can’t switch off">Overthinking</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I had a panic-like moment earlier">Panic Spike</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I feel lonely and disconnected lately">Lonely</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I think I might be burned out">Burnout</button>
-                <button type="button" class="px-3 py-1 rounded-full bg-indigo-100 text-indigo-700 hover:bg-indigo-200 quick-prompt" data-prompt="I keep avoiding a task and feel stuck">Procrastination</button>
-                <button type="button" id="clear-chat" class="px-3 py-1 rounded-full bg-red-100 text-red-700 hover:bg-red-200">Clear Chat</button>
-                <label class="flex items-center space-x-1 px-3 py-1 rounded-full bg-gray-100 text-gray-700 cursor-pointer">
-                    <input type="checkbox" id="stream-toggle" class="accent-indigo-600">
-                    <span>Streaming</span>
-                </label>
-                <span id="server-status" class="px-3 py-1 rounded-full bg-yellow-100 text-yellow-700">Checking server...</span>
-            </div>
-            <div id="chat-box" class="chat-container bg-gray-50 p-6 rounded-xl border border-gray-200">
-                <div class="chat-message ai-message shadow-md">
-                    <p>Hello! I'm here to listen. How are you feeling today?</p>
-                </div>
-            </div>
-            <div class="flex items-center space-x-4 mt-6">
-                <input type="text" id="chat-input" placeholder="Type your message..." class="flex-grow p-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-500 transition-all duration-200">
-                <button id="send-btn" class="bg-indigo-600 text-white p-4 rounded-full shadow-lg hover:bg-indigo-700 transition-colors duration-300 flex items-center justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-                        <path d="M3.478 2.405a.75.75 0 01.087 1.253l5.347 4.29-5.347 4.29a.75.75 0 01-.087 1.253.75.75 0 00.58 1.253l5.748-4.621a.75.75 0 00.174-.298l.642-1.92a.75.75 0 00.001-.274l-.642-1.921a.75.75 0 00-.174-.298L4.058 1.152a.75.75 0 00-.58-1.253zM15 8.25a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM15 12a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM18 8.25a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM18 12a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM18 15.75a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM15 15.75a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM12 8.25a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM12 12a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM12 15.75a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75zM9 12a.75.75 0 01.75-.75h.75a.75.75 0 010 1.5h-.75a.75.75 0 01-.75-.75z" />
-                    </svg>
-                </button>
-            </div>
+            <h2 class="text-3xl font-semibold text-center bg-gradient-to-r from-cyan-600 to-indigo-600 bg-clip-text text-transparent mb-6">💬 AI-Guided First-Aid Support</h2>
+            <div class="bg-gradient-to-br from-cyan-50 to-blue-50 rounded-2xl overflow-hidden shadow-lg border border-cyan-200"><iframe src="https://www.chatbase.co/chatbot-iframe/YNkWz6hB820EfUazNDIkf" width="100%" style="height: 100%; min-height: 700px; border: none; display: block;" frameborder="0"></iframe></div>
         </section>
 
         <section id="journal" class="section-content bg-white p-8 rounded-2xl shadow-xl space-y-6 hidden">
@@ -3684,3 +3655,5 @@
     </script>
 </body>
 </html>
+
+
